--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "markdown-it": "^13.0.1",
+    "markdown-it-attrs": "^4.1.6",
+    "markdown-it-multimd-table" : "^4.2.0",
+    "markdown-it-anchor": "^8.6.6",
+    "@sindresorhus/slugify" : "^2.1.1"
   }
 }
