--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-multimd-table" : "^4.2.0",
     "markdown-it-anchor": "^8.6.6",
-    "@sindresorhus/slugify" : "^2.1.1"
+    "@sindresorhus/slugify" : "^2.1.1",
+    "luxon": "^2.4.0"
   }
 }
