--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "scripts": {
     "dev": "eleventy --serve & tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --watch",
-    "build": "eleventy & tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --minify"
+    "build": "eleventy & tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.1",
+    "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.2.4",
     "markdown-it": "^13.0.1",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-multimd-table" : "^4.2.0",
